--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -1,8 +1,5 @@
 .homepage-container{
-    width: 100%;
-    height: 679px;
-    background-size: cover;
-    background-image: url(homepagecover.jpg);
+    background: url(homepagecover.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
 }
 .heading {
     color: azure;
