--- a/src/components/NavBar/NavBar1.css
+++ b/src/components/NavBar/NavBar1.css
@@ -140,7 +140,7 @@
     .menu-icon {
       display: block;
       position: absolute;
-      top: 0;
+      top: 16px;
       right: 0;
       transform: translate(-100%, 60%);
       font-size: 1.8rem;
