--- a/src/components/NavBar/NavBar1.css
+++ b/src/components/NavBar/NavBar1.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    margin: 1px;
+    padding: 1px;
   }
   
   .navbar {
@@ -140,7 +140,7 @@
     .menu-icon {
       display: block;
       position: absolute;
-      top: 16px;
+      top: 13px;
       right: 0;
       transform: translate(-100%, 60%);
       font-size: 1.8rem;
