--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -7,7 +7,6 @@
   .image {
     width:75%;
     max-height:100%;
-    float: right;
     padding-right: 35px;
     padding-bottom: 0;
   }
@@ -19,15 +18,13 @@
     float: left;
   }
   @media (max-width: 480px) {
-    .container{
-      display: block;
-    }
+    /* .container{
+      
+    } */
 
-    .image {
-      width:100%;
-      max-height:100%;
-      padding-right: 0;
-      padding-bottom: 10px;
+    .imageWyd {
+      display: block;
+      text-align: center;
     }
 
     .text {
