--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -6,3 +6,11 @@
     color: azure;
     size: 40px;
 }
+@media (max-width: 480px) {
+    .homepage-container{
+        background: url(homepagecoverMobile.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;
+    }
+    .heading{
+        padding-right: 20px;
+    }
+}
