--- a/src/components/PartnerFirms/PartnerFirms.css
+++ b/src/components/PartnerFirms/PartnerFirms.css
@@ -11,26 +11,55 @@
     padding-right: 35px;
     padding-bottom: 0;
   }
-  
+  .sonyimage {
+    width:75%;
+    max-height:100%;
+    float: right;
+    padding-bottom: 0;
+  }
+.sonytext{
+    width: 805px;
+    font-size: 16px;
+    padding-left: 23px;
+    padding-right: 40px;
+    float: left;
+}
+
+
   .text {
     width: 674px;
     font-size: 16px;
     padding-left: 10px;
     float: left;
   }
+  .imagePartner{
+    width:  600px;
+    height: 500px;
+    object-fit: fill;
+  }
   @media (max-width: 480px) {
     .container{
       display: block;
     }
 
-    .image {
+    .imagePartner{
       width:100%;
       max-height:100%;
       padding-right: 0;
       padding-bottom: 10px;
-      padding-left: 57px;
     }
-
+    .sonyimage{
+        width:100%;
+      max-height:100%;
+      padding-right: 0;
+      padding-bottom: 10px;
+    }
+    .sonytext{
+        width: 280px;
+        font-size: 16px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
     .text {
       width: 280px;
       font-size: 16px;
