--- a/src/components/PartnerFirms/PartnerFirms.css
+++ b/src/components/PartnerFirms/PartnerFirms.css
@@ -1,70 +1,51 @@
-.container {
-    display: flex;
-    align-items: safe;
-    justify-content: space-between;
-  }
-  
-  .image {
-    width:75%;
-    max-height:100%;
-    float: right;
-    padding-right: 35px;
-    padding-bottom: 0;
-  }
-  .sonyimage {
-    width:75%;
-    max-height:100%;
-    float: right;
-    padding-bottom: 0;
-  }
-.sonytext{
-    width: 805px;
-    font-size: 16px;
-    padding-left: 23px;
-    padding-right: 40px;
-    float: left;
+.services__container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem 4rem;
+}
+
+.card.service {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+}
+
+.service__icon {
+  background: var(--color-primary);
+  padding: 0.6rem;
+  border-radius: var(--border-radius-3);
+  font-size: 1.5rem;
+  color: var(--color-white);
+  transition: var(--transition);
+}
+
+.service:hover .service__icon {
+  background: var(--color-light);
+  color: var(--color-primary);
+}
+
+.service h4 {
+  margin-bottom: 0.7rem;
 }
 
 
-  .text {
-    width: 674px;
-    font-size: 16px;
-    padding-left: 10px;
-    float: left;
-  }
-  .imagePartner{
-    width:  600px;
-    height: 500px;
-    object-fit: fill;
-  }
-  @media (max-width: 480px) {
-    .container{
-      display: block;
-    }
 
-    .imagePartner{
-      width:100%;
-      max-height:100%;
-      padding-right: 0;
-      padding-bottom: 10px;
-    }
-    .sonyimage{
-        width:100%;
-      max-height:100%;
-      padding-right: 0;
-      padding-bottom: 10px;
-    }
-    .sonytext{
-        width: 280px;
-        font-size: 16px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    .text {
-      width: 280px;
-      font-size: 16px;
-      padding-left: 10px;
-      padding-right: 10px;
-
-    }
+/* MEDIA QUERIES (tablets) */
+@media screen and (max-width: 1024px) {
+  .services__container {
+      gap: 1.5rem;
   }
+}
+
+
+/* MEDIA QUERIES (phones) */
+@media screen and (max-width: 600px) {
+  .services__container {
+      grid-template-columns: 1fr;
+      gap: 1.2rem;
+  }
+
+  .card.service {
+      gap: 1.2rem;
+  }
+}
